Added SQL Server DB connection and migration
Integrated Entity Framework and created DB

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,24 +1,27 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.AspNetCore": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information",
-      "MokkilicoresExpressAPI.Controllers": "Debug"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost,1433;Database=MokkilicoresExpressDB;User Id=sa;Password=YourStrongPassword@123;TrustServerCertificate=True;"
     },
-    "Console": {
-      "IncludeScopes": true,
-      "LogLevel": {
-        "Default": "Debug"
-      }
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.AspNetCore": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information",
+            "MokkilicoresExpressAPI.Controllers": "Debug"
+        },
+        "Console": {
+            "IncludeScopes": true,
+            "LogLevel": {
+                "Default": "Debug"
+            }
+        }
+    },
+    "AllowedHosts": "*",
+    "Jwt": {
+        "SecretKey": "mokkilicores-express-api-secret-key",
+        "Issuer": "MokkilicoresExpressAPI",
+        "Audience": "MokkilicoresExpressAPIUsers",
+        "ExpiryInHours": 1
     }
-  },
-  "AllowedHosts": "*",
-  "Jwt": {
-    "SecretKey": "mokkilicores-express-api-secret-key",
-    "Issuer": "MokkilicoresExpressAPI",
-    "Audience": "MokkilicoresExpressAPIUsers",
-    "ExpiryInHours": 1
-  }
 }
