WIP: saving current progress before rollback

--- a/MokkilicoresExpressAPI.csproj
+++ b/MokkilicoresExpressAPI.csproj
@@ -20,4 +20,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Mokilicores_client\MokkilicoresExpress.csproj">
+      <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
